# plug

./: .clang-format  .gitignore  .gitlab-ci.yml  .hgignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  conanfile.txt  gcovr.cfg  offa-plug.kdev4  plug  plug.kdev4
.github/workflows/: ci.yml  codeql.yml
cmake/: 50-mustang.rules  70-mustang-plugdev.rules  70-mustang-uaccess.rules  ClangFormat.cmake  Coverage.cmake  DeprecatedOptions.cmake  FindGTest.cmake  Findlibusb-1.0.cmake  Install.cmake  LTO.cmake  Sanitizer.cmake  Template.cmake  plug.desktop
cmake/template/: Version.cpp.in  version.cpp.in
debug/test/: CTestTestfile.cmake  IdLookupTest  Makefile  cmake_install.cmake
debug/test/mocks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: KDevelop.md  Setup.md  Technicalities.md  USB.md
include/: DeviceModel.h  FxSlot.h  IdLookup.h  MustangConstants.h  MustangUpdater.h  PacketSerializer.h  SignalChain.h  UsbComm.h  UsbException.h  Version.h  amp_advanced.h  amplifier.h  common.h  data_structs.h  defaulteffects.h  effect.h  effects_enum.h  library.h  loadfromamp.h  loadfromfile.h  mainwindow.h  mustang.h  quickpresets.h  save_effects.h  saveonamp.h  savetofile.h  settings.h  version.h
include/com/: CommunicationException.h  Connection.h  ConnectionFactory.h  IdLookup.h  LibUsbCompat.h  Mustang.h  MustangConstants.h  MustangUpdater.h  Packet.h  PacketSerializer.h  UsbComm.h  UsbContext.h  UsbDevice.h  UsbException.h  mustang.h
include/ui/: amp_advanced.h  amplifier.h  defaulteffects.h  effect.h  library.h  loadfromamp.h  loadfromfile.h  mainwindow.h  quickpresets.h  save_effects.h  saveonamp.h  savetofile.h  settings.h
plug/: CMakeLists.txt  README  about.ui  amp_advanced.cpp  amp_advanced.h  amp_advanced.ui  amplifier.cpp  amplifier.h  amplifier.ui  data_structs.h  defaulteffects.cpp  defaulteffects.h  defaulteffects.ui  effect.cpp  effect.h  effect.ui  effects_enum.h  library.cpp  library.h  library.ui  loadfromamp.cpp  loadfromamp.h  loadfromamp.ui  loadfromfile.cpp  loadfromfile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mustang.cpp  mustang.h  plug.pro  quickpresets.cpp  quickpresets.h  quickpresets.ui  save_effects.cpp  save_effects.h  save_effects.ui  saveonamp.cpp  saveonamp.h  (+7 more)
script/: ci_build.sh  ci_setup.sh  image_build.sh  manage_nonroot_udev_access.sh
src/: CMakeLists.txt  Main.cpp  MustangUpdater.cpp  PacketSerializer.cpp  UsbComm.cpp  amp_advanced.cpp  amplifier.cpp  defaulteffects.cpp  effect.cpp  library.cpp  loadfromamp.cpp  loadfromfile.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mustang.cpp  quickpresets.cpp  save_effects.cpp  saveonamp.cpp  savetofile.cpp  settings.cpp
src/com/: CMakeLists.txt  ConnectionFactory.cpp  LibUsbCompat.cpp  Mustang.cpp  MustangUpdater.cpp  Packet.cpp  PacketSerializer.cpp  UsbComm.cpp  UsbContext.cpp  UsbDevice.cpp  UsbException.cpp  mustang.cpp
src/ui/: CMakeLists.txt  amp_advanced.cpp  amplifier.cpp  amplifier.ui  defaulteffects.cpp  defaulteffects.ui  effect.cpp  effect.ui  library.cpp  loadfromamp.cpp  loadfromamp.ui  loadfromfile.cpp  mainwindow.cpp  mainwindow.ui  quickpresets.cpp  save_effects.cpp  save_effects.ui  saveonamp.cpp  savetofile.cpp  settings.cpp  settings.ui
test/: CMakeLists.txt  ConnectionFactoryTest.cpp  DeviceModelTest.cpp  FxSlotTest.cpp  IdLookupTest.cpp  MustangTest.cpp  MustangV3UsbTest.cpp  PacketSerializerTest.cpp  PacketTest.cpp  TypeTest.cpp  UsbCommTest.cpp  UsbTest.cpp
test/helper/: Matcher.h  MustangConstants.h  PacketConstants.h  PacketHelper.h
test/integration/: CMakeLists.txt  Main.cpp
test/matcher/: Matcher.h  PacketMatcher.h  TypeMatcher.h
test/mocks/: CMakeLists.txt  LibUsbMocks.cpp  LibUsbMocks.h  MockConnection.h  UsbDeviceMock.cpp  UsbDeviceMock.h
ui/: amplifier.ui  defaulteffects.ui  mainwindow.ui  quickpresets.ui  savetofile.ui
